--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 layout: home
 title: Home
 banner: "assets/images/banners/Background Github pic.jpg"
+<link rel=”icon” href=”/Favicon AI.png” type=”image/x-icon”>
 ---
