--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ layout: home
 title: Home
 banner: "assets/images/banners/Background Github pic.jpg"
 ---
+<link type="Image/x-icon" href="/favicon.ico" rel="icon">
