--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@ layout: home
 title: Home
 banner: "assets/images/banners/Background Github pic.jpg"
 ---
-<link type="Image/x-icon" href="/favicon.ico" rel="icon">
+<head>
+  <link type="Image/x-icon" href="/favicon.ico" rel="icon">
+</head>
