--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@ title: Home
 banner: "assets/images/banners/Background Github pic.jpg"
 ---
 <head>
-  <link type="Image/x-icon" href="/favicon.ico" rel="icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
