--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 layout: home
 title: Home
-banner: "assets/images/banners/Background Github pic.jpg"
+banner: "assets/images/banners/AI%20Midjourney%20new%20cover.jpg"
 ---
 <head>
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
